crates/plotnik-lib/tests/02-parser/recovery_unclosed/missing_bracket.txt
[(identifier) (string)
------------------ DIAGNOSTICS -------------------
error: missing closing `]`
 --> query.ptk:1:1
  |
1 | [(identifier) (string)
  | -^^^^^^^^^^^^^^^^^^^^^
  | |
  | alternation started here
  |
help: add `]` to close the alternation
